--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
 <div class="container">
   <h1>{{title}}</h1>
   
-  <app-directiva></app-directiva>
+  <router-outlet></router-outlet>
+
 </div>
 
 
