funciona login y crear ilustracion y ver todasIlustraciones

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
-<footer class="footer bg-black rounded-top text-center">
+<footer class="footer bg-dark rounded-top text-center">
     <div class="container py-2">
         <p class="text-white my-2">
-            &copy; {{autor.nombre + ' ' + autor.apellidos}}
+            &copy; {{footer.nombre + ' ' + footer.apellidos + ' ' + footer.fecha + ' ' + footer.texto}} 
         </p>
     </div>
 </footer>
