--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <app-header></app-header>
 
-<div class="container">
-  <h1>{{title}}</h1>
-  
+<div class="container my-3 wrap">
   <router-outlet></router-outlet>
-
 </div>
 
 
