--- a/src/app/galeria/form-ilustracion/form-ilustracion.component.html
+++ b/src/app/galeria/form-ilustracion/form-ilustracion.component.html
@@ -28,10 +28,12 @@
             <div class="form-group row">
                 <label for="pais" class="col-form-label col-sm-2">Categoría</label>
                 <div class="col-sm-6">
-                    <select [compareWith]="compararCategoria" class="form-control" [(ngModel)]="ilustracion.categorias" name="categoria" ><!-- required -->
+                    <select [compareWith]="compararCategoria" class="form-control" [(ngModel)]="categoriaSeleccionada" name="categoria" ><!-- required -->
                         <option [ngValue]="undefined">--- selecciona una categoría ---</option>
                         <option *ngFor="let categoria of categorias" [ngValue]="categoria">{{categoria.nombre}}</option>
                     </select>
+
+                    <button class="btn btn-primary" type="button" id="inputGroupFileAddon04" (click)="mostrarPDialogCategoria()">Crear Categoría</button> 
                 </div>
             </div>
 
@@ -52,11 +54,29 @@
                     </div>
                 </div>
             </div>
-
-
         </form>
 
     </div>
 
 
 </div>
+
+<!--Ventana al formulario de crear categoria-->
+<p-dialog [(visible)]="displayActivationDialog" [modal]="true" [closable]="true" [style]="{width: '60vw',height:'60vh'}">
+    <ng-template pTemplate="header">
+        <h3>Crear nueva Categoría</h3>
+    </ng-template>
+    <ng-template pTemplate="content">
+        <!-- Contenido del diálogo aquí -->
+        <div class="form-group">
+            <label for="nombreCategoria">Nombre de la Categoría</label>
+            <input type="text" id="nombreCategoria" class="form-control" [(ngModel)]="nuevaCategoria.nombre" name="nombreCategoria">
+          </div>
+          <div class="form-group">
+            <p-checkbox label="Es Galería" [(ngModel)]="nuevaCategoria.esGaleria" binary="true"></p-checkbox>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" (click)="createCategoria()">Guardar</button>
+          </div>
+    </ng-template>
+</p-dialog>
